package barista;

message ApplicationSettings {
  // The last project directory which was loaded
  optional string last_project_directory = 1; 
}

message ProjectSettings {
  // The project description
  optional string project_description = 1; 
}
